examples/test/testpolicy3360.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3360
  namespace: namespace251
spec:
  podSelector:
    matchLabels:
      key12: value33
      key9: value13
      key25: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value30
          key39: value21
          key27: value44
      podSelector:
        matchLabels:
          key21: value27
